--- a/index.css
+++ b/index.css
@@ -1,22 +1,34 @@
 *{
     margin:0;
     padding:2;
+    background-image: linear-gradient() /*url("bibliotek.jpg")*/;
     background-color: burlywood;
 }
 
-#bruh{
+.bruh{
     width:250px;
     background-color:lightgray;
 }
 
-.Författare{
-    background-color: beige;
-}
-
-.Bok{
+.Text{
     background-color: aliceblue;
 }
 
+.Bok{
+    width:250px;
+    background-color: aquamarine;
+}
+
 #Test{
+    width:250px;
     background-color:aquamarine;
+}
+
+#Bakgrund{
+    background-image: url("bibliotek.jpg");
+}
+
+.Bokfor{
+    width:250px;
+    background-color: aqua;
 }
