--- a/index.css
+++ b/index.css
@@ -50,6 +50,15 @@
     position: absolute;
 }
 
+#Bokfor2{
+    width:250px;
+    background-color: #C34A36;
+    margin-left:1500px;
+    margin-top:-50px;
+    border-radius: 5px;
+    position: absolute;
+}
+
 .Författare{
     width:250px;
     background-color:#C34A36;
