--- a/index.css
+++ b/index.css
@@ -59,12 +59,12 @@
     position: absolute;
 }
 
-.Bokfor{
+.BokFor{
     width:250px;
     background-color: #C34A36;
 }
 
-#Bokfor{
+#BokFor{
     width:250px;
     background-color: #C34A36;
     margin-left:300px;
@@ -106,6 +106,20 @@
     background-color:#C34A36;
     margin-left:890px;
     margin-top:-32px;
+    border-radius: 5px;
+    position: absolute;
+}
+
+.FilmReg{
+    width:250px;
+    background-color:#C34A36;
+}
+
+#FilmReg{
+    width:250px;
+    background-color:#C34A36;
+    margin-left:1200px;
+    margin-top:300px;
     border-radius: 5px;
     position: absolute;
 }
