--- a/index.css
+++ b/index.css
@@ -73,11 +73,22 @@
     position: absolute;
 }
 
-#Bokfor2{
+#Lana{
     width:250px;
     background-color: #C34A36;
     margin-left:1500px;
     margin-top:-50px;
+    border-radius: 5px;
+    position: absolute;
+}
+
+
+
+#Exemplar{
+    width:250px;
+    background-color: #C34A36;
+    margin-left:1500px;
+    margin-top:150px;
     border-radius: 5px;
     position: absolute;
 }
@@ -226,8 +237,8 @@
     border-radius: 5px;
     padding:10px;
     position: absolute;
-    top: 20%;
-    left: 20%;
+    top: 200px;
+    left: 400px;
     box-shadow: 5px 5px 15px;
 }
 
